[package]
name = "my_web_echo"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
bytes = "1.0"
rand = "0.8"
anyhow = "1.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }

[lib]
name = "echo_lib"
path = "src/lib.rs"

[[bench]]
name = "benchmark"
harness = false